<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vehicleNum"
            android:icon="@drawable/ic_baseline_book_online_24"
            android:title="@string/menu_vehicleNum" />

        <item
            android:id="@+id/nav_estfair"
            android:icon="@drawable/ic_baseline_directions_24"
            android:title="@string/menu_estfair" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/menu_about" />

    </group>

</menu>